- Updated HttpConnector: All server-requests are now encoded properly, all server-commands are stored in a separate class - Fixed bug in LobbyActivity: gameListUpdater was never stopped, so LIST_GAMES server requests were executed even when LobbyActivity had disappeared - Clean-up of MainActivity + fixed bug in content_main UI (delete account visible when server updates fail) - This is in a separate branch because there are still some issues with server-commands